--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>John Doe - Business Administration</title>
+  <title> Jon Bryan Salvador - Undergraduate Business Association Events Committee Member </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Jon Bryan Salvador</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/JonBryanSalvador.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Jon Bryan Salvador
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Events Committee Member at Undergraduate Business Association</div>
+        <p class="lead mb-4"></p>Hello! My name is Jon Bryan and I am currently a first year Business Administration Student at the University of California, Riverside. In the future, I plan on double majoring in Art Studio in order to help me achieve my dream of becoming an Imagineer for Walt Disney Imagineering, designing theme park lands for the Walt Disney Company. Besides my interest in the creative field, I am interested in concentrating in marketing in the School of Business. In order to sell myself, here are a few quick things about me and what experience I have!<br><br>
 
-        Enter bio here<br><br>
+        I currently am an active member in the Undergraduate Business Association of UCR, working in the newly established events committee. Under this committee we were able to organize and market our Winter Quarter event titled "Meet Your Concentration," featuring a panel of professors and alumni from the School of Business to speak about the different concentrations available at UCR. The high success of this event is attributed to multiple connections with the leaders of business clubs on-campus and the business ambassadors of the School of Business. In the Spring Quarter, the events committee will host another large event featuring another business organization on campus, the Association of Latino Professionals For America. In the end, my experience working in a group setting to plan these events have helped me become a more effective communicator and collaborative worker while advancing my position on campus! <br><br>
 
-        Enter bio here
+        Besides my involvement in business organizations at UCR during my free time, I love to do art. I currently attend the weekly meetings for Starving Artists of UCR to network myself with other similar minded artists on campus and learn more from their experiences with art. Through this club, I have gained new techniques when it comes to still and life drawing with the help of fellow members and the leader of organizations. I did also take part in the gallery presentation where I showcase my artwork to all the students involved in the club. Apart from my involvement with Starving Artists, I do work with multiple mediums from painting with acrylics and oils to digital art on my laptop and iPad, but I do prefer digital art more. With a future double major in Art Studio, I do plan on applying my artistic skills in the graphic design section of marketing. It is important to create something iconic and lasting in someone's mind in order to gain the competitive advantage. One way I have done this is designing a PowerPoint presentation for the "Meet Your Concentration" event. From using minimalistic and contemporary symbols to a custom designed PowerPoint theme, I helped maintain a sense of professionalism in the event. Aside from using my graphical design skills, I currently started a small business called Inkling Art to help market myself to those interested in my work. With this self-owned business, I plan on expanding my art commissions and eventually selling merchandise from stickers, clothing, and even pillowcases! In the end, with the art and business skills I have I am ready to connect with the hearts and minds of all people.
         </p>
         <div class="social-icons">
-          <a target="_blank" href="https://linkedin.com">
+          <a target="_blank" href="https://linkedin.com/in/jon-bryan-salvador-7a860a196">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" href="https://github.com">
+          <a target="_blank" href="https://github.com/JonBryanSalvador">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" href="https://twitter.com">
+          <a target="_blank" href="https://twitter.com/withajbs">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" href="mailto:youremail@gmail.com">
+          <a target="_blank" href="mailto:jonbsalvador@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,51 +92,68 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Company</a></div>
+            <h3 class="mb-0">Events Committee Member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://mulesoft.com">Undergraduate Business Association</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Assists in conception and planning of quarterly events targeted towards undergraduate business majors. These events provide undergrads the opportunity to develop leadership and networking skills with on-campus business organizations, professors, and industry professionals.<br> 
+              • Develops marketing techniques to promote quarterly events<br>
+              • Works with on-campus business organizations and the School of Business to facilitate support for events<br>
+              • Hosted a School of Business sponsored event for 80 students which promoted the concentrations found in the School of Business<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">November 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Whole Foods</a></div>
+            <h3 class="mb-0">Student Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">R'Pantry</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Duties include lifting and unpacking food packages, stocking shelves, handling fresh produce, checking students out, organizing queues, breaking down boxes, and cleaning the pantry<br>
+              • Also informing students about programs hosted by the Well, and answering general questions about R'Pantry's role on campus and CalFresh Benefits<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">January 2020 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Food Packer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Children's Hunger Fund, Sylmar</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Created food packages that are able to sustain a family for a week. Food packages are distributed to needy families through local and international church partners.<br>
+            • Taped and packaged large boxes.
+            • Handled and measured dry foods to be packed per family.<br>
+            • Operation of simple equipment such as heat press and weight scales.<br>
+            • Wrapped toys during the Christmas Season to be distributed to disadvantaged children.<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">September 2015 - Present</span>
           </div>
         </div>
-
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Freelance Commissions Artist</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://pubnub.com">Inkling Art</a></div>
+            <p>
+              • Freelance artist working in a variety of mediums ranging from acrylics, oil paint, oil pastels, and digital painting.<br>
+              • Knowledgable use of art programs including open source software such as Krita. Additional programs include AutoDesk Sketchbook and Art Studio for iOS.<br>
+              • Designed and animated video game character designs in pixel art style for MMORPG GraalOnline Class and GraalOnline Era. Designs ranged from heads, bodies, hats, and shields.<br>
+              • Currently working on an art portfolio to gain admission to UCR's Art Studio Program.<br>
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2019 - Present</span>
+          </div>
+        </div>
 
 
       </div>
@@ -152,37 +169,12 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Science in Business Administration</div>
+            <div>Interested in concentrating in Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">Expected Graduation June 2023</span>
           </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
-      </div>
     </section>
 
     <hr class="m-0">
@@ -190,8 +182,23 @@
     <section class="resume-section p-1 p-lg-5 d-flex align-items-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
+        <p><center>
+            <img src="img/IMG_2078.PNG" width="500px">
+        </center>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/IMG_2079.PNG" width="500px"><br>
+        </center></p>
+        <p><center>
+            <img src="img/yearn.jpg" width="500px">
+        </center>
+        <center>
+            <img src="img/meetyourconcentration.png" width="500px"><br>
+        </center></p>
+        <center>
+            <img src="img/img_7500 (1).jpg" width="500px">
+        </center>
+        <center>
+            <img src="img/img_7f2226519d62-1.jpg" width="500px">
         </center>
       </div>
     </section>
@@ -199,7 +206,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Jon Bryan Salvador </center><br>
 
 
   </div>
